--- a/example.tex
+++ b/example.tex
@@ -13,6 +13,7 @@
 %% Load special font packages here if you wish
 %\usepackage{lmodern}
 \usepackage{mathpazo}
+\usepackage{multicol}
 %\usepackage{euler}
 \usepackage{lineno}
 \usepackage{relsize}
